--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 # Test discovery patterns
-python_files = test_*.py *_test.py test*.py
+python_files = test_*.py *_test.py
 python_classes = Test*
 python_functions = test_*
 
@@ -8,18 +8,15 @@ python_functions = test_*
 testpaths = tests_pages
 
 # Output options
-addopts = 
-    -v
+addopts =
     --tb=short
     --strict-markers
-    --disable-warnings
-    
+
 # Markers
 markers =
     smoke: Quick smoke tests
     regression: Full regression tests
     login: Login related tests
-    slow: Slow running tests
 
 # Allure configuration
 allure_report = allure-report
